@@ -1,3 +1,8 @@
+2003-04-04  Thomas Klausner  <wiz@danbala.tuwien.ac.at>
+
+	* dccserver.c (get_file): allow files of size 0 to be resumed.
+	(get_file): fix two messages.
+
 2003-04-03  Thomas Klausner  <wiz@danbala.tuwien.ac.at>
 
 	* dccserver.c (main): add minimal port verification.
